web/book/tests/examples/snapshots/examples__book__transforms__derive__examples__0.snap
---
source: web/book/tests/examples/book.rs
expression: "from employees\nderive gross_salary = salary + payroll_tax\n"
---
SELECT
  *,
  salary + payroll_tax AS gross_salary
FROM
  employees

