web/book/tests/examples/snapshots/examples__book__transforms__derive__examples__1.snap
---
source: web/book/tests/examples/book.rs
expression: "from employees\nderive {\n  gross_salary = salary + payroll_tax,\n  gross_cost = gross_salary + benefits_cost\n}\n"
---
SELECT
  *,
  salary + payroll_tax AS gross_salary,
  salary + payroll_tax + benefits_cost AS gross_cost
FROM
  employees

